--- a/app/views/blog/index.html.erb
+++ b/app/views/blog/index.html.erb
@@ -1,6 +1,6 @@
 <div class="article">
   <% @articles.each do |article| %>
     <%= render partial: "article", locals: {article: article} %>
-  <% end %>
+  <% end %><br/>
   <%= paginate(@articles) %>
 </div>
